--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: rgb(235, 232, 232);
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 a {
@@ -13,4 +16,15 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media (max-width: 600px){
+
+  h2{
+    font-size: 1.5rem;
+  }
+  p {
+    font-size: 0.9rem;
+  }  
+
 }
