--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -9,9 +9,9 @@
     width: 100%;
     padding: 2px 15px 2px 5px;
     height: 65px;
-    z-index: 1;
+    z-index: 5;
     justify-content:space-between;
-    background-color: #0351B8; /*#0090d9;*/
+    background-color: #0351B8; /*#2791D9;*/
     transition-timing-function: ease-in;
     transition: all 0.7s
 }
@@ -38,12 +38,23 @@
 }
 
 .nav__icon:hover{
-    margin:10px;
-    width: 47px;
+    opacity:0.8;
 }
 
 .nav__title{
     color: white;
     flex:1;
     margin-left: 1rem;
+}
+
+
+@media (max-width: 600px){
+
+    .nav__icon{
+        margin:5px;
+        width: 35px;
+        object-fit: contain;
+        transition-timing-function: ease-in;
+        transition: all 0.3s;
+    }
 }
