Mobile css fixed

--- a/components/NavBar/NavBar.module.css
+++ b/components/NavBar/NavBar.module.css
@@ -52,7 +52,7 @@
 
     .nav__icon{
         margin:5px;
-        width: 35px;
+        width: px;
         object-fit: contain;
         transition-timing-function: ease-in;
         transition: all 0.3s;
