--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -207,12 +207,14 @@
     border-radius: 20px;
     padding:0.5rem;
     top:-1rem;
+    width:90%;
+    margin:auto;
   }
 
   .author{
     z-index:1;
     position:relative;
-    bottom: -64vh;
+    bottom: -60vh;
     font-size: 0.5rem;
     left:89vw;
   }
@@ -290,7 +292,7 @@
   }
 
   .header{
-    height: 50vh;
+    height: 48vh;
   }
 
 
@@ -302,7 +304,7 @@
     color: white;
     border-radius: 20px;
     padding:0rem;
-    top:0rem;
+    top:1rem;
   }
 
   .author{
