--- a/components/Home/Home.module.css
+++ b/components/Home/Home.module.css
@@ -22,7 +22,7 @@
 }
 
 .mainImage{
-  background-image: url('/images/llegadas.jpg');
+  background-image: url('/images/lexusesh300.jpeg');
   background-color: #d4eefc; /*#f0f9ff;*/
   background-size:cover;
   position: absolute;
@@ -34,7 +34,7 @@
 }
 
 @supports(object-fit: cover){
-  .imagex{
+  .mainIimage{
     height: 100%;
     object-fit: cover;
     object-position: center center;
@@ -179,7 +179,7 @@
   }
 
   .mainImage{
-    background-image: url('/images/llegadas.jpg');
+    background-image: url('/images/lexusesh300.jpeg');
     background-color: #d4eefc; /*#f0f9ff;*/
     background-size:cover;
     position: absolute;
@@ -273,7 +273,7 @@
 @media (max-width: 600px){
 
   .mainImage{
-    background-image: url('/images/llegadas.jpg');
+    background-image: url('/images/lexusesh300.jpeg');
     background-color: #d4eefc; /*#f0f9ff;*/
     background-size:cover;
     position: absolute;
